--- a/stat461syllabus.html
+++ b/stat461syllabus.html
@@ -39,7 +39,7 @@
                 <p>
                     This page serves as a collection of the most common and most important Course Questions to help you succeed. Be sure to look through the various sections. I will keep this page as up-to-date as possible to address any questions that you and your classmates bring up as well as any changes that we need to make.
                 </p>
-                <p>Date of Last Update: 8/24/2025</p>
+                <p>Date of Last Update: 9/3/2025</p>
                 <h3 id="catTop">Categories</h3>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
                     <li><a href="#keyInfo" class="bodylinks">Key Course Information</a></li>
@@ -74,7 +74,7 @@
                     <div class="collapsible-content">
                         <div class="content-inner">
                             <p>
-                                Student Hours for Fall 2025 will be held in Thomas 425A on <mark>TBA</mark>; look for a poll in Canvas.
+                                Student Hours for Fall 2025 will be held in Thomas 425A on Mondays and Fridays, ~4:35pm to 6:00pm.
                             </p>
                             <p>
                                 As always, you can email me to set up additional times as well as use a Bookings link found in Canvas in my email signature. <br />
@@ -540,12 +540,12 @@
                                             <label for="faq79" class="lbl-toggle" tabindex="0" id="studentResponsibilities">What are my responsibilities as a student in the class?</label>
                                             <div class="collapsible-content">
                                                 <div class="content-inner">
-                                                    <p><mark>This is an area that the Fall 2025 class will get to contribute to creating course policies.</mark> Here's what the Spring 2025 class came up with as additional Student Responsibilities.
-                                                    </p>
+                                                    <p>The Fall 2025 class came up with the following as additional Student Responsibilities.</p>
                                                     <!--style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3"-->
                                                     <ul >
-                                                        <li>Be involved in groups</li>
                                                         <li>Be respectful</li>
+                                                        <li>Be a good team member</li>
+                                                        <li>Be kind</li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -555,13 +555,13 @@
                                             <label for="faq80" class="lbl-toggle" tabindex="0" id="instructorResponsibilities">What are Neil's responsibilities as the instructor?</label>
                                             <div class="collapsible-content">
                                                 <div class="content-inner">
-                                                    <p><mark>This is an area that the Fall 2025 class will get to contribute to creating course policies.</mark> Here's what the Spring 2025 class came up with for Teacher Responsibilities.
-                                                    </p>
+                                                    <p><mark>The Fall 2025 class came up with the following for Teacher Responsibilities. </p>
                                                     <!--style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3"-->
                                                     <ul>
-                                                        <li>Be the teacher you would want</li>
-                                                        <li>No trick questions on assessments</li>
-                                                        <li>Be respectful</li>
+                                                        <li>Communicate</li>
+                                                        <li>Be understanding</li>
+                                                        <li>Be accomodating</li>
+                                                        <li>Be open to receiving feedback</li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -609,14 +609,14 @@
                                                     <p>
                                                         Participation can take many forms and I try to provide a variety of avenues for you to do so. Some forms are highly visible such as sharing your thinking in front of the entire class. Other forms are less visible such as completing Warmup questions and/or exit tickets. And then there are forms of participation that are in-between such as being a good and active group member when we break into small groups.
                                                     </p>
-                                                    <p><mark>This is an area that the Fall 2025 class will get to contribute to creating course policies.</mark> Here's what the Spring 2025 class generated as what counts as participating in the course.
-                                                    </p>
+                                                    <p><mark>The Fall 2025 class generated the following as what counts as participating in the course. </p>
                                                     <ul style="column-count: 2; -webkit-column-count: 2; -moz-column-count: 2; -o-column-count: 2;">
-                                                        <li>Voice your ideas</li>
-                                                        <li>Allow others to speak</li>
-                                                        <li>Show up</li>
-                                                        <li>Ask meaningful questions</li>
-                                                        <li>Actively play attention</li>
+                                                        <li>Attend class</li>
+                                                        <li>Pay attention</li>
+                                                        <li>Raise your hand</li>
+                                                        <li>Speak up</li>
+                                                        <li>Talk to/with classmates</li>
+                                                        <li>Answer questions</li>
                                                     </ul>
                                                     <p>
                                                         In the past, there have been requests that participating in group/collaborative work should have more weight than answering questions in class. To me, all forms of participating are equally weighted.
@@ -691,7 +691,7 @@
                                             <div class="collapsible-content">
                                                 <div class="content-inner">
                                                     <p>
-                                                        To ensure that I and my grading team can get feedback to you in as timely a fashion as possible, I ask that you turn your homework in on time. The class voted that assignments would typically be due by <mark>TBD</mark> (ET). In the event that I need something completed before class, I will clearly state so and that posted time will depart from the typical time and be non-extendable.
+                                                        To ensure that I and my grading team can get feedback to you in as timely a fashion as possible, I ask that you turn your homework in on time. The class voted that assignments would typically be due by 11:59pm (ET). In the event that I need something completed before class, I will clearly state so and that posted time will depart from the typical time and be non-extendable.
                                                     </p>
                                                     <p>
                                                         In the event that you need more time to complete homework there are three routes you may take:
@@ -699,7 +699,7 @@
                                                     <h3 id="late-passes">Late Passes</h3>
                                                     <p><mark>This is an area that the Fall 2025 class will get to contribute to creating course policies.</mark></p>
                                                     <p>
-                                                        If you have late passes available to you, you may use them give yourself an additional <mark>TBD</mark> hours (per late pass) to complete the assignment. You may use a maximum of <mark>TBD</mark> late passes on any assignment. Not all assignments will be eligible for using late passes (e.g., group assignments, quizzes, tests).
+                                                        If you have late passes available to you, you may use them give yourself an additional 24 hours (per late pass) to complete the assignment. You may use a maximum of two late passes on any assignment. Not all assignments will be eligible for using late passes (e.g., group assignments, quizzes, tests).
                                                     </p>
                                                     <p>
                                                         You do not need to ask me to use a late pass. These are things you can automatically use in the homework system.
@@ -932,7 +932,7 @@
                                                     <label for="faq64" class="lbl-toggle" tabindex="0">When are the tests-i.e., in class or in the evening?</label>
                                                     <div class="collapsible-content">
                                                         <div class="content-inner">
-                                                            <p><mark>This is an area that the Fall 2025 class will get to contribute to creating course policies.</mark></p>
+                                                            <p>The Fall 2025 class voted to not have any tests.</p>
                                                             <p>The following information is kept for historical reasons, highlighting what past classes have chosen.</p>
                                                             <ul>
                                                                 <li>The Spring 2025 class voted to not have tests.</li>
@@ -956,8 +956,7 @@
                                                     <label for="faq65" class="lbl-toggle" tabindex="0">When is the final exam?</label>
                                                     <div class="collapsible-content">
                                                         <div class="content-inner">
-                                                            <p><mark>TBD: The class community will develop this.</mark></p>
-                                                            <p>The Spring 2024 classes have voted to not have a Final Exam BUT to potentially have some form of an alternative. Keep in mind that the University schedules Final Exam about half-way through the semester. You are advised to not purchase tickets/make travel plans until after the final exam schedule is released.</p>
+                                                            <p>The Fall 2025 class voted to not have a final exam.</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -1370,8 +1369,6 @@
                                                             <p>
                                                                 Overly relying on other tools (e.g., ChatGPT, Bard, CodePilot, Stack Overflow, etc.) will limit your growth. This can then have implications for your job if you are constantly using these tools to do your work. Therefore, unless explicit permission is given for a particular assignment, the entire class community (the instructor, the students, TAs, etc.) should actively refrain from using generative AI tools. When such use is explicitly authorized, that work should be properly documented. Direct usage of output from chatbots should be treated much like a direct quotation; derivations of such output should be treated as paraphrased text.
                                                             </p>
-                                                            <h3>The Classes Thoughts</h3>
-                                                            <p><mark>TBD by class community</mark></p>
                                                             <!---<p>
                                                                 The class was fairly mixed about using such resources. The general sense of using such tools revolved around using them for limited things and with (extreme) caution. Suggested uses include: helping to debug code, convert formats (e.g., an English description into a LaTeX formatted chunk of code), a study tool to create practice problems, a fancy form of a search engine, and as a source of inspiration. All answers from geneative AI should be treated with great care and used at the students own risk.
                                                             </p>
@@ -1394,34 +1391,29 @@
                                                             <p>
                                                                 Any instances of academic dishonesty will be pursued under the&nbsp;<a class="bodylinks" target="_blank" rel="noopener" href="https://science.psu.edu/current-students/integrity">University and Eberly College of Science regulations</a>&nbsp;concerning academic integrity. For more information on academic integrity, see&nbsp;<a class="bodylinks" target="_blank" rel="noopener" href="http://tlt.its.psu.edu/suggestions/cyberplag/cyberplagstudent.html">Penn State's statement on plagiarism and academic dishonesty</a>.
                                                             </p>
-                                                            <p><mark>TBD; the class community will develop their recommendations.</mark></p>
                                                             <table rules="all" border="1pt">
-                                                                <caption>Spring 2025 Class Decisions for Consequences/Sanctions for Violating Academic Integrity</caption>
+                                                                <caption>Fall 2025 Class Decisions for Consequences/Sanctions for Violating Academic Integrity</caption>
                                                                 <thead>
                                                                     <tr>
-                                                                        <td></td>
-                                                                        <th scope="col">First Time</th>
-                                                                        <th scope="col">Second Time</th>
-                                                                        <th scope="col">Third or Higher Time</th>
+                                                                        <td>Severity</td>
+                                                                        <th scope="col">First Offense</th>
+                                                                        <th scope="col">Subsequent Offenses</th>
                                                                     </tr>
                                                                 </thead>
                                                                 <tbody>
                                                                     <tr>
                                                                         <th scope="row">Minor</th>
                                                                         <td>Redo the assignment</td>
-                                                                        <td>Redo the assignment with one level off</td>
-                                                                        <td>"Not Yet, Not Shown" (0) on the assignment</td>
+                                                                        <td>Treat as Moderate</td>
                                                                     </tr>
                                                                     <tr>
                                                                         <th scope="row">Moderate</th>
-                                                                        <td>Redo the assignment with two levels off</td>
-                                                                        <td>"Not Yet, Not Shown" (0) on the assignment</td>
-                                                                        <td>"Not Yet, Not Shown" (0) on the assignment</td>
+                                                                        <td>Lower assignment grade 1 level</td>
+                                                                        <td>Lower the assignment grade the same number of levels as the number of offenses (2nd, -2 levels; 3rd, -3 levels, etc.)</td>
                                                                     </tr>
                                                                     <tr>
                                                                         <th scope="row">Major</th>
                                                                         <td>"Not Yet, Not Shown" (0) on the assignment</td>
-                                                                        <td>Fail the course and recommend a grade of XF</td>
                                                                         <td>Fail the course and recommend a grade of XF</td>
                                                                     </tr>
                                                                 </tbody>
