--- a/STAT184/quarto_crash_course/index.html
+++ b/STAT184/quarto_crash_course/index.html
@@ -4052,6 +4052,7 @@ Note
 </ol></li>
 <li>Additional Aspects of Open Science
 <ol start="6" type="1">
+<li>Cross-Referencing</li>
 <li>Author Contributions</li>
 <li>References</li>
 <li>Code Appendix</li>
