--- a/stat184syllabus.html
+++ b/stat184syllabus.html
@@ -532,7 +532,7 @@
                     </tr>
                     <tr>
                         <th scope="row">Major: Violation consists of extensive instances in a single assignment, spans multiple assignments, and/or directly impacts another student</th>
-                        <td><mark>TBD</mark>></td>
+                        <td><mark>TBD</mark></td>
                         <td><mark>TBD</mark></td>
                     </tr>
                 </table>
