More Spring 2026 updates

--- a/stat184syllabus.html
+++ b/stat184syllabus.html
@@ -544,7 +544,7 @@
                 </p>
                 <h2 id="other-policies">What other course policies are there? (University Policies)</h2>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
-                <h3>Important Dates for the Fall 2025 Semester</h3>
+                <h3>Important Dates for the Spring 2026 Semester</h3>
                 <ul>
                     <li>Classes Begin on Monday, January 12, 2026</li>
                     <li>Regular Drop Deadline is Saturday, January 17, 2026</li>
