--- a/stat461syllabus.html
+++ b/stat461syllabus.html
@@ -39,7 +39,7 @@
                 <p>
                     This page serves as a collection of the most common and most important Course Questions to help you succeed. Be sure to look through the various sections. I will keep this page as up-to-date as possible to address any questions that you and your classmates bring up as well as any changes that we need to make.
                 </p>
-                <p>Date of Last Update: 1/7/2026</p>
+                <p>Date of Last Update: 1/28/2026</p>
                 <h3 id="catTop">Categories</h3>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
                     <li><a href="#keyInfo" class="bodylinks">Key Course Information</a></li>
@@ -539,14 +539,18 @@
                                             <label for="faq79" class="lbl-toggle" tabindex="0" id="studentResponsibilities">What are my responsibilities as a student in the class?</label>
                                             <div class="collapsible-content">
                                                 <div class="content-inner">
-                                                    <p><mark>The Spring 2026 class will have the opportunity to come up with a list of Student Responsibilities.</mark></p>
-                                                    <!---<p>The Fall 2025 class came up with the following as additional Student Responsibilities.</p>
-                                                    style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3"
-                                                    <ul >
+                                                   <!-- <p><mark>The Spring 2026 class will have the opportunity to come up with a list of Student Responsibilities.</mark></p>-->
+                                                    <p>The Spring 2026 class came up with the following as additional Student Responsibilities.</p>
+                                                    <ul style="column-count: 2; -webkit-column-count: 2; -moz-column-count: 2; -o-column-count: 2;">
+                                                        <li>Work with others in the class</li>
+                                                        <li>Communicate with others in the class</li>
+                                                        <li>Practice good time management</li>
                                                         <li>Be respectful</li>
-                                                        <li>Be a good team member</li>
+                                                        <li>Contribute to your group</li>
+                                                        <li>Respect others' time</li>
+                                                        <li>If you aren't feeling well, either wear a mask or stay home; don't come to class sick.</li>
                                                         <li>Be kind</li>
-                                                    </ul>-->
+                                                    </ul>
                                                 </div>
                                             </div>
                                         </div>
@@ -555,15 +559,16 @@
                                             <label for="faq80" class="lbl-toggle" tabindex="0" id="instructorResponsibilities">What are Neil's responsibilities as the instructor?</label>
                                             <div class="collapsible-content">
                                                 <div class="content-inner">
-                                                    <p><mark>The Spring 2026 class will have the opportunity to come up with a list Teacher Responsibilities that they value.</mark></p>
-                                                    <!---<p>The Fall 2025 class came up with the following for Teacher Responsibilities. </p>
-                                                    <!--style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3"
-                                                    <ul>
-                                                        <li>Communicate</li>
-                                                        <li>Be understanding</li>
-                                                        <li>Be accomodating</li>
-                                                        <li>Be open to receiving feedback</li>
-                                                    </ul>--->
+                                                    <!--<p><mark>The Spring 2026 class will have the opportunity to come up with a list Teacher Responsibilities that they value.</mark></p>-->
+                                                    <p>The Spring 2026 class came up with the following for Teacher Responsibilities. </p>
+                                                    <ul style="column-count: 2; -webkit-column-count: 2; -moz-column-count: 2; -o-column-count: 2;">
+                                                        <li>Provide extra resources</li>
+                                                        <li>Practice good time management</li>
+                                                        <li>Be responsive to us</li>
+                                                        <li>Be flexible (within reason)</li>
+                                                        <li>Communicate key info (e.g. due dates & their changes)</li>
+                                                        <li>Share research opportunities</li>
+                                                    </ul>
                                                 </div>
                                             </div>
                                         </div>
@@ -610,16 +615,18 @@
                                                     <p>
                                                         Participation can take many forms and I try to provide a variety of avenues for you to do so. Some forms are highly visible such as sharing your thinking in front of the entire class. Other forms are less visible such as completing Warmup questions and/or exit tickets. And then there are forms of participation that are in-between such as being a good and active group member when we break into small groups.
                                                     </p>
-                                                    <p><mark>The Spring 2026 class will have the opportunity to develop a definition for what counts as participation.</mark></p>
-                                                    <!---<p><mark>The Fall 2025 class generated the following as what counts as participating in the course. </p>
+                                                    <!--<p><mark>The Spring 2026 class will have the opportunity to develop a definition for what counts as participation.</mark></p>-->
+                                                    <p>The Spring 2026 class generated the following as what counts as participating in the course. </p>
                                                     <ul style="column-count: 2; -webkit-column-count: 2; -moz-column-count: 2; -o-column-count: 2;">
-                                                        <li>Attend class</li>
                                                         <li>Pay attention</li>
-                                                        <li>Raise your hand</li>
-                                                        <li>Speak up</li>
-                                                        <li>Talk to/with classmates</li>
-                                                        <li>Answer questions</li>
-                                                    </ul>--->
+                                                        <li>Take notes</li>
+                                                        <li>Use body langauge that conveys that you're paying attention</li>
+                                                        <li>Complete any type of engagement questions (e.g., TopHat, Live Poll, Signal Cards, etc.)</li>
+                                                        <li>Talk with people around you</li>
+                                                        <li>Only work on course-related activities during class</li>
+                                                        <li>Attempt to answer questions</li>
+                                                        <li>Send Neil messages with any questions outside of class that you don't ask during class</li>
+                                                    </ul>
                                                     <p>
                                                         In the past, there have been requests that participating in group/collaborative work should have more weight than answering questions in class. To me, all forms of participating are equally weighted.
                                                     </p>
@@ -699,9 +706,9 @@
                                                         In the event that you need more time to complete homework there are three routes you may take:
                                                     </p>
                                                     <h3 id="late-passes">Late Passes</h3>
-                                                    <p><mark>This is an area that the Spring 2026 class will get to contribute to creating course policies.</mark></p>
+                                                    <!--<p><mark>This is an area that the Spring 2026 class will get to contribute to creating course policies.</mark></p>-->
                                                     <p>
-                                                        If you have late passes available to you, you may use them give yourself an additional <mark>TBD</mark> hours (per late pass) to complete the assignment. You may use a maximum of <mark>TBD</mark> late passes on any assignment. Not all assignments will be eligible for using late passes (e.g., group assignments, quizzes, tests).
+                                                        If you have late passes available to you, you may use them give yourself an additional 24 hours (per late pass) to complete the assignment. You may use a maximum of two (2) late passes on any assignment. Not all assignments will be eligible for using late passes (e.g., group assignments, quizzes, tests).
                                                     </p>
                                                     <p>
                                                         You do not need to ask me to use a late pass. These are things you can automatically use in the homework system.
@@ -809,11 +816,11 @@
                                                                 </dd>
                                                                 <dt>Tests</dt>
                                                                 <dd>
-                                                                    <mark>This is an area that the Spring 2026 class will get to contribute to creating course policies.</mark>
+                                                                    The class will have up to two tests that will be held in class.
                                                                 </dd>
                                                                 <dt>Final Exam</dt>
                                                                 <dd>
-                                                                    <mark>This is an area that the Spring 2026 class will get to contribute to creating course policies.</mark>
+                                                                    The class has voted to not have any final exam.
                                                                 </dd>
                                                                 <dt>Course Group Project</dt>
                                                                 <dd>
@@ -934,7 +941,7 @@
                                                     <label for="faq64" class="lbl-toggle" tabindex="0">When are the tests-i.e., in class or in the evening?</label>
                                                     <div class="collapsible-content">
                                                         <div class="content-inner">
-                                                            <p><mark>The Spring 2026 class will vote on this toic.</mark></p>
+                                                            <p>The Spring 2026 class has voted to have up to two tests, in class, and have them be open notes. More details will be given in class.</p>
                                                             <p>The following information is kept for historical reasons, highlighting what past classes have chosen.</p>
                                                             <ul>
                                                                 <li>The Fall 2025 class voted not to have tests.</li>
@@ -959,7 +966,7 @@
                                                     <label for="faq65" class="lbl-toggle" tabindex="0">When is the final exam?</label>
                                                     <div class="collapsible-content">
                                                         <div class="content-inner">
-                                                            <p><mark>The Spring 2026 class will vote on this question Day 1.</mark></p>
+                                                            <p>The Spring 2026 class has voted to not have a final exam.</p>
                                                             <!--<p>The Fall 2025 class voted to not have a final exam.</p>-->
                                                         </div>
                                                     </div>
@@ -1395,9 +1402,9 @@
                                                             <p>
                                                                 Any instances of academic dishonesty will be pursued under the&nbsp;<a class="bodylinks" target="_blank" rel="noopener" href="https://science.psu.edu/current-students/integrity">University and Eberly College of Science regulations</a>&nbsp;concerning academic integrity. For more information on academic integrity, see&nbsp;<a class="bodylinks" target="_blank" rel="noopener" href="http://tlt.its.psu.edu/suggestions/cyberplag/cyberplagstudent.html">Penn State's statement on plagiarism and academic dishonesty</a>.
                                                             </p>
-                                                            <p><mark>The Spring 2026 class will generate and vote on potential consequences.</mark></p>
+                                                            <!--<p><mark>The Spring 2026 class will generate and vote on potential consequences.</mark></p>-->
                                                             <table rules="all" border="1pt">
-                                                                <caption>Fall 2025 Class Decisions for Consequences/Sanctions for Violating Academic Integrity</caption>
+                                                                <caption>Fall 2026 Class Decisions for Consequences/Sanctions for Violating Academic Integrity</caption>
                                                                 <thead>
                                                                     <tr>
                                                                         <td>Severity</td>
@@ -1408,18 +1415,18 @@
                                                                 <tbody>
                                                                     <tr>
                                                                         <th scope="row">Minor</th>
-                                                                        <td><mark>TBD</mark></td>
+                                                                        <td>Redo the assignment</td>
                                                                         <td>Treat as Moderate</td>
                                                                     </tr>
                                                                     <tr>
                                                                         <th scope="row">Moderate</th>
-                                                                        <td><mark>TBD</mark></td>
-                                                                        <td><mark>TBD</mark></td>
+                                                                        <td>Zero on the assignment</td>
+                                                                        <td>Treat as Major</td>
                                                                     </tr>
                                                                     <tr>
                                                                         <th scope="row">Major</th>
-                                                                        <td><mark>TBD</mark></td>
-                                                                        <td><mark>TBD</mark></td>
+                                                                        <td>Zero on the assignment</td>
+                                                                        <td>Fail the course (recommend XF)</td>
                                                                     </tr>
                                                                 </tbody>
                                                                 <tfoot>
