--- a/stat184syllabus.html
+++ b/stat184syllabus.html
@@ -30,7 +30,7 @@
                     This page serves as the Course Frequenty Asked Questions (FAQ) page and syllabus for Neil's section (Sec. 1) of STAT 184: Introduction to R course in Spring 2026. Feel free to scroll through the page and/or use the navigation links I've provided. If you find something that doesn't work, please let me know so I can fix it.
                 </p>
                 <p><mark>Highlighted/marked text</mark> indicates a place where the class (you) will have a say in the creation of a course policy. After the first week, we'll have these sections filled out.</p>
-                <p>Last updated: 1/6/2026</p>
+                <p>Last updated: 1/28/2026</p>
                 <h2 id="topLinks">Quick Links</h2>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
                     <li><a href="#courseDescp" class="bodylinks">Course Description</a></li>
@@ -154,45 +154,54 @@
                     </li>
                 </ol>
                 <h3>Student Responsibilities</h3>
-                <p><mark>Students will have an opportunity to put together a list of their responsibilities. We will update this after the class has an opportunity to propose and vote on suggestions.</mark></p>
-                <!---<p>Fall 2025's list of student responsibilities</p>
+                <!--<p><mark>Students will have an opportunity to put together a list of their responsibilities. We will update this after the class has an opportunity to propose and vote on suggestions.</mark></p>-->
+                <p>Spring 2026's list of student responsibilities</p>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
-                    <li>Help each other</li> 
-                    <li>Make sure to engage in the class</li> 
-                    <li>Actively participate</li> 
-                    <li>Show up (be punctual)</li> 
-                    <li>Be nice and kind</li> 
-                    <li>Do your part, esp. in groups</li> 
-                    <li>Be accountable individually and in groups</li> 
-                    <li>Seek help when you need to</li> 
-                    <li>Participate in discussions</li> 
-                    <li>Have a positive attitude</li> 
-                    <li>Communicate</li> 
-                    <li>Don't cheat</li> 
-                    <li>Don't play off sterotypes</li> 
-                    <li>Don't be biased towards others (e.g, racism)</li> 
-                    <li>Be considerate</li> 
-                    <li>Collaborate</li> 
-                    <li>Respond to members of the class community</li>
-                </ul>--->
+                    <li>Come to class</li>
+                    <li>Don't use AI tools</li>
+                    <li>Do your homework (on time)</li>
+                    <li>Come prepared and ready to learn</li>
+                    <li>Participate</li>
+                    <li>Practice good & effective communication</li>
+                    <li>Be helpful to others</li>
+                    <li>Be punctual/on time</li>
+                    <li>Be open minded</li>
+                    <li>Form a study group</li>
+                    <li>Do your part in groups</li>
+                    <li>Practice self-thrive</li>
+                    <li>Be mindful of others; don't be a distraction</li>
+                    <li>Be responsible</li>
+                    <li>Be cool</li>
+                    <li>Follow course policies/rules</li>
+                    <li>Give your best effort</li>
+                    <li>Be a decent and respectful human being</li>
+                    <li>Stay up-to-date on course items</li>
+                    <li>Don't talk over others</li>
+                    <li>Don't hog all the speaking time</li>
+                </ul>
                 <h3>Instructor Responsibilities</h3>
-                <p><mark>Students will have an opportunity to put together a list of instructor responsibilities. We will update this after the class has an opportunity to propose and vote on suggestions.</mark></p>
-                <!---<p>Fall 2025's list Instructor responsibilities</p>
+                <!--<p><mark>Students will have an opportunity to put together a list of instructor responsibilities. We will update this after the class has an opportunity to propose and vote on suggestions.</mark></p>-->
+                <p>Spring 2026's list Instructor responsibilities</p>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
-                    <li>Be patient</li> 
-                    <li>Keep tracking our progress</li> 
-                    <li>Be open minded</li> 
-                    <li>Use fair, equitable grading</li> 
-                    <li>Answer questions</li> 
-                    <li>Provide help</li> 
-                    <li>Respond to emails</li> 
-                    <li>Have a positive attitude</li> 
-                    <li>Be engaging</li> 
-                    <li>Provide clear instructions</li> 
-                    <li>Be accessible</li> 
-                    <li>Provide feedback</li> 
-                    <li>Be respectful</li>
-                </ul>--->
+                    <li>Guide the students</li>
+                    <li>Be patient</li>
+                    <li>Be open to talk to</li>
+                    <li>Ensure timely grading/feedback</li>
+                    <li>Reply promptly</li>
+                    <li>Be receptive to feedback</li>
+                    <li>Provide students feedback</li>
+                    <li>Provide instructions</li>
+                    <li>Be available beyond class time</li>
+                    <li>Keep Canvas up-to-date</li>
+                    <li>Communicate with the students</li>
+                    <li>Provide clear expectations</li>
+                    <li>Skillful engagement</li>
+                    <li>Patience (esp. with different learning speeds)</li>
+                    <li>Be flexible with unexpected events</li>
+                    <li>Provide necessary materials</li>
+                    <li>Be willing to help students</li>
+                    <li>Have Student Hours</li>
+                </ul>
                 <h3>Eberly College of Science Code of Mutual Respect and Cooperation</h3>
                 <p>
                     Within the Eberly College of Science we have a set of 12 principles meant to capture and convey the values we hope that all members of our community will choose to embody and make the college a rewarding community for all. Please take a moment to look through <a class="bodylinks" target="_blank" rel="noopener" href="https://science.psu.edu/climate-and-diversity/code-mutual-respect-and-cooperation">The Eberly College of Science Code of Mutual Respect and Cooperation</a>.
@@ -211,24 +220,32 @@
                 <h4 id="participation">Participation</h4>
                 <p>Physically attending class is not sufficient to learn the material. You need to actively take part in class; that is, participate</p>
                 </p>
-                <p><mark>Students will have an opportunity to put together a list of what it means to participate. We will update this after the class has an opportunity to propose and vote on suggestions.</mark></p>
-                <!---<p>
-                    The Fall 2025 classes generated the following markers of participating in class.
+                <!--<p><mark>Students will have an opportunity to put together a list of what it means to participate. We will update this after the class has an opportunity to propose and vote on suggestions.</mark></p>-->
+                <p>
+                    The Spring 2026 classes generated the following markers of participating in class.
                 </p>
                 <ul style="column-count:3; -webkit-column-count:3; -moz-column-count:3; -o-column-count:3;">
-                    <li>Show up</li>
-                    <li>Do your work</li>
-                    <li>Engage in conversations</li>
                     <li>Ask questions</li>
+                    <li>(Attempt to) Answer questions</li>
+                    <li>Talk with peers during activities</li>
+                    <li>Use Signal Cups</li>
+                    <li>Actively listen</li>
+                    <li>Actively contribute</li>
+                    <li>Interact with peers and the instructor</li>
+                    <li>Don't be on your phone</li>
+                    <li>Don't be off-task on your computer</li>
+                    <li>Don't talk over other people</li>
+                    <li>Don't be off-topic</li>
                     <li>Complete assignments</li>
                     <li>Pay attention</li>
-                    <li>Answer questions</li>
-                    <li>Actively listen</li>
-                    <li>Share ideas/thoughts</li>
-                    <li>Take notes</li>
-                    <li>Do engagement actions (e.g., signal cups, TopHat, Slido, etc.)</li>
-                    <li>Stay off your phone when you're not supposed to be on it</li>
-                </ul>--->
+                    <li>Attend class</li>
+                    <li>Raise your hand</li>
+                    <li>Do any polls</li>
+                    <li>Engage throughtfully with the material</li>
+                    <li>Comment on Perusall readings</li>
+                    <li>Try</li>
+                    <li>Do your part</li>
+                </ul>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="assignments">How does grading work? (Assignments and Assessment)</h2>
                 <h3>My Assessment Approach</h3>
@@ -258,14 +275,16 @@
                     </dd>
                     <dt>Tests</dt>
                     <dd>
-                        <mark>Students will vote on whether there will be any tests. We will update this after the class has an opportunity to propose and vote on suggestions.</mark> <!---The Fall 2025 class voted for no tests.--->
+                        <!--<mark>Students will vote on whether there will be any tests. We will update this after the class has an opportunity to propose and vote on suggestions.</mark>--> 
+                        The Spring 2026 class voted for no tests.
                     </dd>
                     <dd>
                         In the event that there is at least one test, the test will be held in a proctored environment such as in class or in the Testing Center. Electronic devices may be limited and/or require the use of lockdown systems.
                     </dd>
                     <dt>Final Exam</dt>
                     <dd>
-                        <mark>Students will vote on whether there will be a final exam. We will update this after the class has an opportunity to propose and vote on suggestions.</mark>
+                        <!--<mark>Students will vote on whether there will be a final exam. We will update this after the class has an opportunity to propose and vote on suggestions.</mark>-->
+                        The Spring 2026 voted for no final.
                     </dd>
                     <dt>Course Group Project</dt>
                     <dd>
@@ -276,14 +295,15 @@
                 <p>
                     Assignments that are part of MyOpenMath (MOM) will allow each student to use a Late Pass to given themselves additional time to complete the assignment. 
                 </p>
-                <p><mark>The class will vote on 1) how much time each Late Pass is worth, and 2) how many Late Passes students can use on an individual assignment.</mark></p>
+                <!--<p><mark>The class will vote on 1) how much time each Late Pass is worth, and 2) how many Late Passes students can use on an individual assignment.</mark></p>-->
+                <p>Each late pass will extend the due date for the assignment by 24 hours and students may use up to two (2) late passes on each eligible assignment.</p>
                 <p>
                     There are several important things to keep in mind related to Late Passes:
                 </p>
                 <ul>
-                    <li>You do not need to ask to use a Late Pass. You may apply them directly to the assignment in MOM.</li>
+                    <li>You do not need to ask to use a Late Pass. You may apply them directly to the assignment in MyOpenMath (MOM).</li>
                     <li>Not all assignments will be eligible for late passes (e.g., group assignments, quizzes, tests).</li>
-                    <li>All students will start with 10 Late Passes. Once used, they are gone.</li>
+                    <li>All students will start with 12 Late Passes. Once used, they are gone.</li>
                     <li>Grading will not begin until <em>after</em> the Late Pass period closes. Nor will solutions be available until this time.</li>
                     <li>Late passes extend time <em>from the posted due date</em>, not from when you redeem them.</li>
                     <li>Accessing a MOM assignment when you can see solutions blocks using Late Passes on that assignment.</li>
@@ -313,8 +333,8 @@
                     Due to the existence of Late Passes and extensions, I will not make full answer keys available to students until after all assignments are submitted. Many detailed solutions (including grading rubrics) will be available in the homework system (MOM) once you've submitted the assignment and the Late Pass Period has passed. Keep in mind that if you opt to view answers after the due date, the system will bar you from using a Late Pass.
                 </p>
                 <h3 id="testing-policy">Testing Policy</h3>
-                <p><mark>This will depend upon how the class votes.</mark></p>
-                <!---<p>The Fall 2025 classes voted to not have tests.</p>--->
+                <!--<p><mark>This will depend upon how the class votes.</mark></p>-->
+                <p>The Spring 2026 classes voted to not have tests.</p>
                 <h3 id="grading">Grading Policy</h3>
                 <p>
                     We use a Standards-Based Grading System in this course. This means that we live and breath the learning outcomes when thinking about assessing each one of you. Throughout each assignment (homework, quizzes, tests, coding interview, final exam, and course project), every question connects to at least one of the learning outcomes. Each time you answer a question, you are adding to the body of evidence about your understanding for each outcome. We use that entire body of evidence to evaluate where you end up for each learning outcome.
@@ -512,7 +532,7 @@
                 <p>
                     Any instances of academic dishonesty will be pursued under the&nbsp;<a class="bodylinks" target="_blank" rel="noopener" href="https://science.psu.edu/current-students/advising-and-student-services/integrity">University and Eberly College of Science regulations</a> concerning academic integrity. 
                 </p>
-                <p><mark>Students will have the opportunity to come up with and vote upon suggested consequences for violating Academic Integrity for the course.</mark></p>
+                <!--<p><mark>Students will have the opportunity to come up with and vote upon suggested consequences for violating Academic Integrity for the course.</mark></p>-->
                 <table rules="all" border="1pt">
                     <caption>Spring 2026 Consequences/Sanctions for Violating Academic Integrity</caption>
                     <tr>
@@ -522,18 +542,18 @@
                     </tr>
                     <tr>
                         <th scope="row">Minor: Violation consists of a single instance in an assignment and does not directly impact another student</th>
-                        <td><mark>TBD</mark></td>
+                        <td>Redo the assignment</td>
                         <td>Treat as a Moderate violation</td>
                     </tr>
                     <tr>
                         <th scope="row">Moderate: Violation consists of multiple instances in an assignment and does not directly impact another student</th>
-                        <td><mark>TBD</mark></td>
-                        <td><mark>TBD</mark></td>
+                        <td>Redo the assignment with a 1-level penalty</td>
+                        <td>Zero on the assignment</td>
                     </tr>
                     <tr>
                         <th scope="row">Major: Violation consists of extensive instances in a single assignment, spans multiple assignments, and/or directly impacts another student</th>
-                        <td><mark>TBD</mark></td>
-                        <td><mark>TBD</mark></td>
+                        <td>Zero on the assignment</td>
+                        <td>Fail the class (Recommend XF)</td>
                     </tr>
                 </table>
                 <p>
